# Robotics

./: README.md  pr2_ar_tracker_indiv.launch  scene_segmenter_groovy.cpp
graspit_bci_ws/src/graspit_msgs/: CMakeLists.txt  package.xml
graspit_bci_ws/src/graspit_msgs/action/: CheckGraspReachability.action  RunObjectRecognition.action
graspit_bci_ws/src/graspit_msgs/msg/: Grasp.msg  ObjectInfo.msg  SceneInfo.msg
graspit_bci_ws/src/graspit_msgs/msg/.svn/: entries
graspit_bci_ws/src/graspit_msgs/msg/.svn/text-base/: Grasp.msg.svn-base  GraspStatus.msg.svn-base
graspit_bci_ws/src/graspit_msgs/msg/.svn/tmp/: Grasp.msg.tmp  tempfile.tmp
graspit_bci_ws/src/graspit_msgs/srv/: AnalyzePose.srv  GetCameraOrigin.srv  GetObjectInfo.srv  LocationInfo.srv
graspit_bci_ws/src/mvp_objrec/objrec_ros_integration/: CMakeLists.txt  package.xml
graspit_bci_ws/src/mvp_objrec/objrec_ros_integration/include/objrec_ros_integration/: objrec_interface.h
graspit_bci_ws/src/mvp_objrec/objrec_ros_integration/launch/: models.launch  objrec_node.launch  objrec_nodelet.launch  parameters.launch
graspit_bci_ws/src/mvp_objrec/objrec_ros_integration/scripts/: objrec_spoofer.py  stored_msg.yaml
graspit_bci_ws/src/mvp_objrec/objrec_ros_integration/src/: objrec_interface.cpp
graspit_bci_ws/src/mvp_objrec/objrec_ros_integration/srv/: FindObjects.srv
graspit_bci_ws/src/object_models/: CMakeLists.txt  README.md  package.xml
graspit_bci_ws/src/object_models/launch/: all_models.launch
graspit_bci_ws/src/object_models/scripts/: convert_broken_files.bash  make_model_launch.sh
(+247 files in other folders)
