<package>
<name>graspit_msgs</name>
<version>1.0.0</version>
  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>
  <description>grasp_common</description>
  <author>hao</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/grasp_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>actionlib</run_depend>

<!-- <export>-->
<!--    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lgraspit_msgs"/>-->
<!--  </export>-->
</package>


